--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta http-equiv="Content-Type" charset="UTF-8" />
-        <title>Box Model</title>
+        <title>Portifolio</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -79,7 +79,7 @@
 
                     <div class="habilidades-conteudo1">
 
-                        <h3>Linguagens e tecnologias </h3>
+                        <h3>Linguagens e Tecnologias </h3>
 
                         <ul>
                             <p>Html</p>
